# cash-flow-analysis

./: .gitignore  Dockerfile  README.md  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
src/: __init__.py
src/cashflow/: __init__.py  types.py
src/cashflow/simulate/: __init__.py  array_utilities.py  error.py  index.py  nprand.py  simulator.py  simulator.pyi  transaction.py  types.py
src/cashflowanalysis/: __init__.py  transaction.py
src/transactionalsimulator/: __init__.py  simulator.py  transaction.py  types.py
tests/cash-flow-analysis/: test_transaction.py
tests/cashflow/: __init__.py
tests/cashflow/simulator/: __init__.py  test_array_utilities.py  test_transaction.py
tests/transactionalsimulator/: test_transaction.py
