[metadata]
name = cashflow
version = attr: cashflowanalysis.VERSION
description = A Cashflow simulation analysis.
long_description = file: README.md, LICENSE.rst
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy >= 1.22.1
    ray >= 1.9.2

[options.packages.find]
where = src
include =
    transactional*