[metadata]
name = cashflow
version = attr: cashflow.VERSION
description = A Cashflow simulation analysis.
long_description = file: README.md, LICENSE.rst
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy >= 1.22.1
    ray >= 1.9.2
include_package_data = True

[options.package_data]
cashflow = py.typed

[options.extras_require] =
dev =
    black
    pytest
    flake8
    mypy

[options.packages.find]
where = src
include =
    cashflow
